Compute statistics to segmentation regions