@@ -36,6 +36,7 @@ import org.weasis.core.api.media.data.TagW;
 import org.weasis.core.util.FileUtil;
 import org.weasis.dicom.codec.DicomImageElement;
 import org.weasis.dicom.codec.TagD;
+import org.weasis.dicom.codec.utils.DicomMediaUtils;
 import org.weasis.dicom.viewer2d.View2d;
 import org.weasis.dicom.viewer2d.mip.MipView.Type;
 import org.weasis.dicom.viewer2d.mpr.RawImageIO;
@@ -198,9 +199,12 @@ public class SeriesBuilder {
           rawIO.setTag(TagD.get(Tag.BitsStored), imgRef.getBitsStored());
 
           int lastIndex = sources.size() - 1;
-          rawIO.setTag(
-              TagD.get(Tag.SliceThickness),
-              getThickness(sources.get(0), sources.get(lastIndex), lastIndex));
+          double thickness =
+              DicomMediaUtils.getThickness(sources.getFirst(), sources.get(lastIndex));
+          if (thickness <= 0.0) {
+            thickness = sources.size();
+          }
+          rawIO.setTag(TagD.get(Tag.SliceThickness), thickness);
           double[] loc = (double[]) imgRef.getTagValue(TagW.SlicePosition);
           if (loc != null) {
             rawIO.setTag(TagW.SlicePosition, loc);
@@ -233,27 +237,6 @@ public class SeriesBuilder {
         }
       }
     }
-  }
-
-  static double getThickness(ImageElement firstDcm, ImageElement lastDcm, int range) {
-    double[] p1 = (double[]) firstDcm.getTagValue(TagW.SlicePosition);
-    double[] p2 = (double[]) lastDcm.getTagValue(TagW.SlicePosition);
-    if (p1 != null && p2 != null) {
-      double diff = Math.abs((p2[0] + p2[1] + p2[2]) - (p1[0] + p1[1] + p1[2]));
-
-      Double t1 = TagD.getTagValue(firstDcm, Tag.SliceThickness, Double.class);
-      if (t1 != null) {
-        diff += t1 / 2;
-      }
-
-      t1 = TagD.getTagValue(lastDcm, Tag.SliceThickness, Double.class);
-      if (t1 != null) {
-        diff += t1 / 2;
-      }
-
-      return diff;
-    }
-    return range;
   }
 
   public static PlanarImage addCollectionOperation(Type mipType, List<ImageElement> sources) {
